--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -202,6 +202,12 @@ section, .modal{
 	margin: 15px 0px;
 	border: 0px;
 	color: white;
+	.link{
+		color: white !important;
+	}
+	.link:hover{
+		text-decoration: underline !important;
+	}
 }
 .alert-danger{
 	background-color: #AB2C00;
