--- a/html/Views/miscellaneous/sign_in_modal.phtml
+++ b/html/Views/miscellaneous/sign_in_modal.phtml
@@ -22,13 +22,33 @@
 							</label>
 						</div>
 						<div class="col-sm-6 text-right">
-							<a href="/forgotten-password" class="link">Did you forget your password?</a>
+							<a href="#" class="link" data-toggle="modal" data-dismiss="modal" data-target="#forgotten-password-modal">Did you forget your password?</a>
 						</div>
 					</div>
 				</div>
 				<div class="modal-footer">
-					<a class="btn btn-info pull-left" href="/forgotten-password">Create new acount</a>
+					<a class="btn btn-info pull-left" href="/">Create new acount</a>
 					<button type="submit" class="btn btn-success">Sign in</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+<div class="modal fade" id="forgotten-password-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
+				<h2 class="modal-title">Forgotten password?</h2>
+			</div>
+			<div class="modal-body">
+					<p>We will send you link to reset your password to email registred with this account.</p>
+					<div class="form-group">
+						<input type="email" class="form-control" name="email" placeholder="your account email" required>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" name="send-reset-password-email" class="btn btn-success">Send</button>
 				</div>
 			</form>
 		</div>
