--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -2,82 +2,6 @@
 	<div id="message-box">
 		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 	</div>
-	<h1>Heading 1</h1>
-	<h2>Heading 2</h2>
-	<h3>Heading 3</h3>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Vestibulum</strong> fringilla rhoncus lorem, et maximus risus egestas in. Nam maximus lectus eget enim tincidunt semper. Vivamus faucibus auctor ipsum, sit amet tincidunt leo fringilla eu. Nullam rutrum, tortor ut laoreet pellentesque, augue erat placerat justo, non faucibus purus eros sit amet magna. Maecenas placerat magna a nisi tincidunt mollis. Morbi finibus ante purus, ut ultrices massa suscipit id. Ut finibus tristique mauris eu porttitor. Fusce non aliquam mi. Ut vel dignissim ex, a vulputate tortor. In tincidunt lobortis nisl vel vehicula. </p>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fringilla rhoncus lorem, et maximus risus egestas in. Nam maximus lectus eget enim tincidunt semper. <span class="link">Vivamus faucibus auctor</span> ipsum, sit amet tincidunt leo fringilla eu. Nullam rutrum, tortor ut laoreet pellentesque, augue erat placerat justo, non faucibus purus eros sit amet magna. Maecenas placerat magna a nisi tincidunt mollis. Morbi finibus ante purus, ut ultrices massa suscipit id. Ut finibus tristique mauris eu porttitor. Fusce non aliquam mi. Ut vel dignissim ex, a vulputate tortor. In tincidunt lobortis nisl vel vehicula. </p>
-	<div class="alert alert-success alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
-	<div class="alert alert-danger alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
-	<div class="alert alert-info alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
-	
-	<form id="addfile" action="/pack/7/add-file" method="POST" enctype="multipart/form-data">
-		<div class="btn btn-default btn-upload"><i class="fa fa-upload"></i><input type="file" name="file" required></div>
-		<input type="submit">
-	</form>
-
-	<form id="addperm" action="/pack/7/update-permissions" method="POST">
-		<input type="password" name="authorizationPassword"/>
-		<br />
-		<input type="text" name="user[0][username]"/>
-		<input type="checkbox" name="user[0][permission]" value="1">
-		<input type="checkbox" name="user[0][permission]" value="2">
-		<br />
-		<input type="submit">
-	</form>
-
-	<form id="addperm2">
-		<h3>GG</h3>
-		<input type="password" name="authorizationPassword"/>
-		<br />
-		<input type="text" name="group[0][id]"/>
-		<input type="checkbox" name="group[0][view]" value="1">
-		<input type="checkbox" name="group[0][edit]" value="1">
-		<input type="checkbox" name="group[0][remove]" value="1">
-		<br />
-		<input type="submit">
-	</form>
-
-	<script>
-		$("#addperm2").submit(function(event){
-			event.preventDefault();
-			$.ajax({
-				type: 'POST',
-				url: "/pack/7/update-permissions",
-				data: $(this).serialize(),
-				dataType : "json",
-			});
-		});
-	</script>
-	
-	<h3>Group</h3>
-
-	<form action="/group/create" method="POST">
-		<input type="text" name="name"/>
-		<input type="text" name="description"/>
-		<br /> 
-		<input type="submit">
-	</form>
-
-	<form id="adduserform"> 
-		<input type="text" name="users" placeholder="username"/>
-		<input type="submit">
-	</form>
-
-	<script>
-		$("#adduserform").submit(function(event){
-			event.preventDefault();
-			$.ajax({
-				type: 'POST',
-				url: "/group/2/add-users",
-				data: $(this).serialize(),
-				dataType : "json",
-			});
-		});
-	</script>
-
-	<button class="btn btn-default">Button</button>
-	<button class="btn btn-danger">Button</button>
-	<button class="btn btn-success">Button</button>
-	<button class="btn btn-info">Button</button>
+	<h1 class="jumbotron alert alert-danger">ERROR 404 Not Found</h1>
+	<h2>Requested url does not exist.</h2>
 </div>
