--- a/html/Views/Pack/showFile.phtml
+++ b/html/Views/Pack/showFile.phtml
@@ -7,7 +7,7 @@
 		<h1 id="topheading"><a href="/pack/<?=$pack->getId()?>" class="link text-muted"><?=$pack->getName()?></a> <span class="text-muted">/</span> <?=$file->getName()?></h1>
 		<div class="row">
 			<div class="col-sm-5 col-md-4 col-lg-3">
-				<div class="panel panel-default">
+				<div class="panel panel-default" id="menu">
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-xs-5 col-sm-6">
@@ -59,13 +59,13 @@
 			<div class="panel-heading">
 				<?php if($permission >= 2): ?>
 					<div class="row">
-						<div class="col-xs-8">
+						<div class="col-xs-7">
 							<h2><?=$file->getName()?></h2>
 						</div>
-						<div class="col-xs-4 text-right">
-							<a class="btn btn-success" href="/pack/<?=$pack->getId()?>/<?=$file->getName()?>/content"><i class="fa fa-download"></i> Download</a>
-							<button class="btn btn-info" name="edit-code"><i class="fa fa-pencil-square-o"></i> Edit</button>
-							<button class="btn btn-success" name="save-code" pack="<?=$pack->getId()?>" file="<?=$file->getName()?>"><i class="fa fa-save"></i> Save</button>
+						<div class="col-xs-5 text-right download-buttons">
+							<a class="btn btn-success" href="/pack/<?=$pack->getId()?>/<?=$file->getName()?>/content"><i class="fa fa-download"></i><span class="hidden-xs"> Download</span></a>
+							<button class="btn btn-info" name="edit-code"><i class="fa fa-pencil-square-o"></i><span class="hidden-xs"> Edit</span></button>
+							<button class="btn btn-success" name="save-code" pack="<?=$pack->getId()?>" file="<?=$file->getName()?>"><i class="fa fa-save"></i><span class="hidden-xs"> Save</span></button>
 						</div>
 					</div>	
 				<?php else: ?>
