--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -13,7 +13,6 @@
 		<script src="/Includes/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="/Includes/Croppie/croppie.css" />
 		<script src="/Includes/Croppie/croppie.min.js"></script>
-		<script src="/Includes/javascript/print_r.js"></script>
 		<script src="/Includes/javascript/message.js"></script>
 		<script src="/Includes/javascript/validator.js"></script>
 		<script src="/Includes/javascript/avatar-n-cropper.js"></script>
@@ -51,7 +50,7 @@
 									</ul>
 								</li>
 							<?php else: ?>
-								<li class="text-right">	
+								<li  class="pull-right">	
 									<a href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
 								</li>
 							<?php endif ?>
