--- a/html/Views/Error/error405.phtml
+++ b/html/Views/Error/error405.phtml
@@ -1,5 +1,7 @@
-<div id="message-box">
-	<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+<div class="container">
+	<div id="message-box">
+		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+	</div>
+	<h1 class="jumbotron alert alert-danger">ERROR 405</h1>
+	<h2>Request method is not allowed.</h2>
 </div>
-<h1 class="jumbotron">ERROR 405</h1>
-<h2>Request method is not allowed.</h2>
