--- a/html/Views/Group/usersList.phtml
+++ b/html/Views/Group/usersList.phtml
@@ -1,17 +1,17 @@
 <?php if($group->getUsers()->count()): ?>
 	<?php foreach($group->getUsers() as $index => $user): ?>
 		<div class="row">
-			<div class="col-xs-6">
+			<div class="col-xs-5 overflow-name">
 				<a class="link" href="/user/<?=$user->getUsername()?>">
 					<?=$user->getUsername()?>
 				</a>
 			</div>
 			<?php if($permission == 2): ?>
-				<div class="col-xs-5 text-right">
+				<div class="col-xs-5 text-center">
 					<i class="fa fa-user-plus"></i>
 					<?=$user->getAddedToGroup($group, "j M o")?>
 				</div>
-				<div class="col-xs-1 text-right">
+				<div class="col-xs-2 text-right">
 					<button class="btn btn-danger btn-sm" name="remove-user" group="<?=$group->getId()?>" user="<?=$user->getUsername()?>"><i class="fa fa-user-times"></i></button>
 				</div>
 			<?php else: ?>
