--- a/html/Views/Home/search.phtml
+++ b/html/Views/Home/search.phtml
@@ -27,7 +27,7 @@
 											<a href="/user/<?=$user->getUsername()?>"><img class="img-responsive" src="<?=$user->getAvatar40()?>"></a>
 										</div>
 										<div class="row">
-											<div class="col-sm-4">
+											<div class="col-xs-9 col-sm-4 overflow-name">
 												<div>
 													<a href="/user/<?=$user->getUsername()?>" class="link"><strong><?=$user->getUsername()?></strong></a>
 												</div>
@@ -36,16 +36,18 @@
 													<?=$user->getCreatedAt("j M o")?>
 												</div>
 											</div>
-											<div class="col-sm-7">
+											<div class="col-xs-3 visible-xs text-right">
+													<i class="fa fa-archive"></i>
+													<?=$user->getPacks()->count()?>
+											</div>
+											<div class="col-xs-12 col-sm-6 overflow-name">
 												<div>
 													<?=($user->getName() || $user->getSurname() ? "<h3>".$user->getName().($user->getName() && $user->getSurname() ? " ": null).$user->getSurname()."</h3>": null)?>
 												</div>
 											</div>
-											<div class="col-sm-1 text-right">
-												<div>
+											<div class="col-sm-2 hidden-xs text-right">
 													<i class="fa fa-archive"></i>
 													<?=$user->getPacks()->count()?>
-												</div>
 											</div>
 										</div>
 									</div>
@@ -57,33 +59,34 @@
 								<?php foreach($items as $index => $pack): ?>
 									<div class="pack-row">
 										<div class="row">
-											<div class="col-xs-12 col-sm-5 col-md-5">
-												<div class="row">
-													<div class="col-xs-4 col-sm-12">
-														<a href="/pack/<?=$pack->getId()?>" class="link"><strong><?=$pack->getName()?></strong></a>
-													</div>
-													<div class="col-xs-3 col-sm-12">
-														<a class="link text-muted" href="/user/<?=$pack->getOwner()->getUsername()?>">
-															<i class="fa fa-user"></i>
-															<?=$pack->getOwner()->getUsername()?>
-														</a>
-													</div>
-													<div class="col-xs-3 col-sm-6" id="created">
-														<i class="fa fa-share-square"></i>
-														<?=$pack->getCreatedAt("j M o")?>
-													</div>
-													<div class="col-xs-3 col-sm-6" id="updated">
-														<i class="fa fa-pencil-square"></i>
-														<?=$pack->getUpdatedAt("j M o")?>
-													</div>
-												</div>
+											<div class="col-xs-12 col-sm-11 overflow-name">
+												<a href="/pack/<?=$pack->getId()?>" class="link"><strong><?=$pack->getName()?></strong></a>
 											</div>
-											<div class="col-xs-9 col-sm-6 col-md-6">
-												<p><?=$pack->getDescription()?></p>
-											</div>
-											<div class="col-xs-3 col-sm-1 text-right">
+											<div class="hidden-xs col-sm-1 text-right">
 												<i class="fa fa-file"></i>
 												<?=$pack->getFiles()->count()?>
+											</div>
+
+											<div class="col-xs-12">
+												<p><?=$pack->getDescription()?></p>
+											</div>
+											<div class="col-xs-6 col-sm-6 col-lg-8 overflow-name">
+												<a class="link text-muted" href="/user/<?=$pack->getOwner()->getUsername()?>">
+													<i class="fa fa-user"></i>
+													<?=$pack->getOwner()->getUsername()?>
+												</a>
+											</div>
+											<div class="col-xs-6 visible-xs text-right">
+												<i class="fa fa-file"></i>
+												<?=$pack->getFiles()->count()?>
+											</div>
+											<div class="col-xs-6 col-sm-3 col-lg-2" id="created">
+												<i class="fa fa-share-square"></i>
+												<?=$pack->getCreatedAt("j M o")?>
+											</div>
+											<div class="col-xs-6 col-sm-3 col-lg-2 text-right" id="updated">
+												<i class="fa fa-pencil-square"></i>
+												<?=$pack->getUpdatedAt("j M o")?>
 											</div>
 										</div>
 									</div>
