--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -7,7 +7,7 @@
 		<h1>Your profile</h1>
 		<div class="row">
 			<div class="col-sm-4 col-md-3">
-				<div class="panel panel-default" id="user-info">
+				<div class="panel panel-default" id="menu">
 					<div class="row">
 						<div class="col-xs-4 col-sm-12">
 							<div id="avatar-wrapper">
@@ -53,12 +53,12 @@
 								<div class="row">
 									<div class="col-xs-10">
 										<div class="row">
-											<div class="col-sm-12">
+											<div class="col-sm-12 overflow-name">
 												<a class="link" href="/pack/<?=$pack["pack.id"]?>">
 													<?=$pack["pack.name"]?>
 												</a>
 											</div>
-											<div class="col-sm-12">
+											<div class="col-sm-12 overflow-name">
 												<a class="link text-muted" href="/user/<?=$pack["user.username"]?>">
 													<i class="fa fa-user"></i>
 													<?=$pack["user.username"]?>
@@ -92,12 +92,12 @@
 						<?php if($loggedUser->getGroups()->count()): ?>
 							<?php foreach($loggedUser->getGroups() as $index => $group): ?>
 								<div class="row">
-									<div class="col-xs-6">
+									<div class="col-xs-6 overflow-name">
 										<a class="link" href="/group/<?=$group->getId()?>">
 											<?=$group->getName()?>
 										</a>
 									</div>
-									<div class="col-xs-6">
+									<div class="col-xs-6 overflow-name">
 										<a class="link text-muted" href="/user/<?=$group->getOwner()->getUsername()?>">
 											<i class="fa fa-user"></i>
 											<?=$group->getOwner()->getUsername()?>
@@ -125,7 +125,7 @@
 						<?php if($loggedUser->getPacks()->count()): ?>
 							<?php foreach($loggedUser->getPacks() as $index => $pack): ?>
 								<div class="row">
-									<div class="col-xs-5 col-md-6">
+									<div class="col-xs-5 col-md-6 overflow-name">
 										<a class="link" href="/pack/<?=$pack->getId()?>">
 											<?=$pack->getName()?>
 										</a>
@@ -161,7 +161,7 @@
 						<?php if($loggedUser->getMyGroups()->count()): ?>
 							<?php foreach($loggedUser->getMyGroups() as $index => $group): ?>
 								<div class="row">
-									<div class="col-xs-6">
+									<div class="col-xs-6 overflow-name">
 										<a class="link" href="/group/<?=$group->getId()?>">
 											<?=$group->getName()?>
 										</a>
@@ -192,12 +192,12 @@
 						<?php if($foreignPacks->count()): ?>
 							<?php foreach($foreignPacks as $index => $pack): ?>
 								<div class="row">
-									<div class="col-xs-5">
+									<div class="col-xs-5 overflow-name">
 										<a class="link" href="/pack/<?=$pack["pack.id"]?>">
 											<?=$pack["pack.name"]?>
 										</a>
 									</div>
-									<div class="col-xs-5">
+									<div class="col-xs-5 overflow-name">
 										<a class="link text-muted" href="/user/<?=$pack["user.username"]?>">
 											<i class="fa fa-user"></i>
 											<?=$pack["user.username"]?>
@@ -228,12 +228,12 @@
 						<?php if($loggedUser->getGroups()->count()): ?>
 							<?php foreach($loggedUser->getGroups() as $index => $group): ?>
 								<div class="row">
-									<div class="col-xs-6">
+									<div class="col-xs-6 overflow-name">
 										<a class="link" href="/group/<?=$group->getId()?>">
 											<?=$group->getName()?>
 										</a>
 									</div>
-									<div class="col-xs-6">
+									<div class="col-xs-6 overflow-name">
 										<a class="link text-muted" href="/user/<?=$group->getOwner()->getUsername()?>">
 											<i class="fa fa-user"></i>
 											<?=$group->getOwner()->getUsername()?>
